tests/invalid/module_level_constant_mutable/main.py
VALUES: list[int] = [1, 2, 3]
BROKEN: int = VALUES


if __name__ == "__main__":
    print(VALUES)
